// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - ParagraphInput 1`] = `mocked`;

exports[`Mock render - default - value[0] - ParagraphInput 2`] = `
Array [
  Array [
    Object {
      "children": "",
      "className": "{}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "editable": Object {
        "onChange": [Function],
        "onStart": [Function],
      },
      "ellipsis": undefined,
      "id": "default",
      "italic": undefined,
      "mark": undefined,
      "strong": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - default - value[1] - ParagraphInput 1`] = `mocked`;

exports[`Mock render - default - value[1] - ParagraphInput 2`] = `
Array [
  Array [
    Object {
      "children": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
      "className": "{}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "editable": Object {
        "onChange": [Function],
        "onStart": [Function],
      },
      "ellipsis": undefined,
      "id": "default",
      "italic": undefined,
      "mark": undefined,
      "strong": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;
